# XPlayer

./: README.md  settings.gradle.kts
example/: build.gradle.kts
example/src/androidTest/java/com/pujh/example/: ExampleInstrumentedTest.kt
example/src/main/: AndroidManifest.xml
example/src/main/res/layout/: activity_main.xml
example/src/main/res/menu/: toolbar.xml
example/src/main/res/values/: themes.xml
example/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
xplayer/: build.gradle.kts
xplayer/src/main/assets/: fragNV12.frag  fragNV21.frag  fragYUV420P.frag  vertexShader.vert
xplayer/src/main/cpp/: CMakeLists.txt  FFDecode.cpp  FFDecode.h  FFDemux.cpp  FFDemux.h  FFResample.cpp  FFResample.h  IAudioPlayer.cpp  IAudioPlayer.h  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IResample.cpp  IResample.h  IVideoView.cpp  IVideoView.h  SLAudioPlayer.cpp  SLAudioPlayer.h  XData.cpp  XData.h  XEGL.cpp  XEGL.h  XGLRender.cpp  XGLRender.h  XParameter.cpp  XParameter.h  XPlayer.cpp  XPlayer.h  com_pujh_xplayer_XPlayer.cpp
xplayer/src/main/cpp/render/: NV12Render.cpp  NV12Render.h  NV21Render.cpp  NV21Render.h  RGB24Render.cpp  RGB24Render.h  YUV420PRender.cpp  YUV420PRender.h
xplayer/src/main/cpp/util/: IObserver.h  ISubject.cpp  ISubject.h  XLog.h  XThread.cpp  XThread.h
xplayer/src/main/cpp/utils/: AAssetUtil.cpp  AAssetUtil.h  GLUtil.cpp  GLUtil.h  Synchronizer.cpp  Synchronizer.h  log.h  time.h
xplayer/src/main/cpp/view/: GLVideoView.cpp  GLVideoView.h  WindowVideoView.cpp  WindowVideoView.h
(+5 files in other folders)
